most of the styling for the jobs page done including: -preventing overflow - placing both essential and preferred qualifications next to eachother. - list styling using decimal for responsibilities. - list styling using decimal for qualifications. - moved aside to the center. - changed all job headings to be the same size. -used a flex method to ensure items in the sections were properly aligned. things to still be done: * minor tweaks to page layout *minor tweaks to page colours * use display hover to hide everything but the summary title and reference number till hovered over without changing the box format.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -261,3 +261,51 @@ textarea {
     background-color: #1A4E8D; /* Darker blue when hovering */
 }
 
+/*Styling for job page */
+#network_admin, #software_dev, #web_dev {
+    overflow: hidden; /* Ensures that floated elements are contained within the parent */
+}
+p.reference {
+    float: right;
+    margin-top: -3em; /* Moves the reference to the top right corner */
+}
+.qualifications {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 1em;
+}
+.other_info {
+    display: flex;
+    justify-content: space-between; /* Aligns items to the left and right */
+    align-items: center;
+    flex-wrap: wrap; /* Ensures items wrap to the next line if they don't fit */
+    margin-top: 1em;
+}
+.qualifications div, .other_info p {
+    flex: 0 0 48%; /* Sets the width of each div to 48% */
+    box-sizing: border-box; /* Ensures padding and border are included in the width */
+}
+.essential, .preferred {
+    padding: 1em;
+    border-radius: 0.5em;
+}
+.other_info .report, .other_info .salary {
+    margin: 0;
+    flex: 1 0 48%; /* Sets the width of each div to 48% */
+}
+.salary {
+    text-align : right;
+}
+.responsibilities li {
+    list-style-type: decimal; /* Changes the list style for responsibilities to decimal */
+}
+.qualifications li {
+    list-style-type: square; /* Changes the list style for qualifications to square */
+}
+#aside {
+    text-align: center;
+}
+#main h2, h3, h4 {
+    font-size: 1.5em;
+}
